# agent-lab

./: .env.example  .gitignore  CLAUDE.md  README.md  ROADMAP.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
agents/radar/: .env.example  .gitignore  README.md  pyproject.toml
agents/radar/src/radar/: __init__.py  agent.py  agui_tracing.py  cron.py  exceptions.py  main.py  middleware.py  push.py
agents/radar/src/radar/chains/: __init__.py  chat.py  recommend.py
agents/radar/src/radar/collectors/: __init__.py  base.py  grok_collector.py  hn.py  http_collector.py  rss_collector.py
agents/radar/src/radar/observability/: __init__.py  gen_ai_attrs.py  persist.py  repair.py  tracer.py
agents/radar/src/radar/pipelines/: evaluate.py  ingest.py
agents/radar/src/radar/tools/: __init__.py  evaluate.py  github_stats.py  search_items.py  web_search.py
agents/radar/tests/: conftest.py  test_agui_tracing.py  test_chains_recommend.py  test_collectors_hn.py  test_config.py  test_exceptions.py  test_langsmith_config.py  test_logging.py  test_middleware.py  test_persist_chat.py  test_schema.py  test_sqlite_checkpointer.py  test_tool_evaluate.py  test_tool_github_stats.py  test_tool_search_items.py  test_tool_web_search.py
agents/shared/: pyproject.toml
agents/shared/src/agent_lab_shared/: __init__.py  config.py  db.py  exceptions.py  llm.py  logging.py  schema.py  sse.py
docker/: README.md  start-all.sh  stop-all.sh
docs/: 01-PHILOSOPHY.md  02-ARCHITECTURE.md  03-TECH-STACK.md  04-DEVELOPMENT-MANUAL.md  05-CONFIG.md  06-SOURCE-COLLECTION.md  07-AGENT-ORCHESTRATION.md  08-AGENT-MIGRATION-PLAN.md  (+29 more)
(+229 files in other folders)
