[project]
name = "agent-lab"
version = "0.0.1"
description = "Agent lab Python workspace root"
requires-python = ">=3.12"

[tool.uv.workspace]
members = ["agents/shared", "agents/radar"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
