[project]
name = "agent-lab-radar"
version = "0.0.1"
description = "Radar agent — discovery engine"
requires-python = ">=3.12"
dependencies = [
    "agent-lab-shared",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "langchain>=0.3",
    "langchain-openai>=0.2",
    "langchain-community>=0.3",
    "httpx>=0.27",
    "pydantic>=2.9",
    "python-dotenv>=1.0",
    "beautifulsoup4>=4.12",
    "click>=8.1",
]

[project.scripts]
radar-push = "radar.cron:main"
radar-serve = "radar.main:serve"

[tool.uv.sources]
agent-lab-shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/radar"]
