[project]
name = "agent-lab-shared"
version = "0.0.1"
description = "Shared utilities for agent-lab Python agents"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "httpx>=0.27",
    "langchain-core>=0.3",
    "langchain-openai>=0.2",
    "python-dotenv>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_lab_shared"]
